RemoveNotifyObserverAttributeQuickFix
corrected RemoveNotifyObserverAttributeQuickFix issues